--- a/about-me.html
+++ b/about-me.html
@@ -6,90 +6,54 @@
     <meta name="author" content="Wesley Klein">
     <meta name="desciption" content="The personal website of Wesley Klein.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="images/pixel-me.png">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
   <body>
-    <div class="sidenav-wrapper">
-      <a class="nav-option title" href="index.html">Wesley<br/>Klein</a>
-      <nav class="sidenav">
-        <button class="dropdown-btn nav-option">artwork</button>
-        <div class="dropdown-container clicked">
-          <button class="dropdown-btn nav-option">comics</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="artwork/cyclux.html">cyclux</a>
-            <a class="nav-option" href="artwork/branches.html">branches</a>
-          </div>
-          <a class="nav-option" href="artwork/illustrations.html">illustrations</a>
-          <a class="nav-option" href="artwork/animations.html">animations</a>
-          <a class="nav-option" href="artwork/photo.html">photo</a>
-        </div>
-        <button class="dropdown-btn nav-option">projects</button>
-        <div class="dropdown-container">
-          <a class="nav-option" href="projects/virtual-fixtures.html">virtual<br/>fixtures</a>
-          <a class="nav-option" href="projects/neo.html">find neo</a>
-          <a class="nav-option" href="projects/linecollection.html">line<br/>collection</a>
-          <a class="nav-option" href="projects/lifesimulator.html">life<br/>simulator</a>
-          <a class="nav-option" href="projects/processing-sketches.html">processing<br/>sketches</a>
-        </div>
-        <a class="nav-option" href="blog.html">blog</a>
-        <a class="nav-option" href="about-me.html">about</a>
-      </nav>
-      <a href="index.html"><img id="title-image" src="images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-    </div>
 
-    <div class="topnav-wrapper">
-      <nav class="topnav">
-        <a href="index.html"><img id="title-image" src="images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
-        <div class="dropdown-container main-dropdown">
-          <button class="dropdown-btn nav-option">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="artwork/cyclux.html">cyclux</a>
-              <a class="nav-option" href="artwork/branches.html">branches</a>
-            </div>
-            <a class="nav-option" href="artwork/illustrations.html">illustrations</a>
-            <a class="nav-option" href="artwork/animations.html">animations</a>
-            <a class="nav-option" href="artwork/photo.html">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="projects/virtual-fixtures.html">virtual<br/>fixtures</a>
-            <a class="nav-option" href="projects/neo.html">find neo</a>
-            <a class="nav-option" href="projects/linecollection.html">line collection</a>
-            <a class="nav-option" href="projects/lifesimulator.html">life simulator</a>
-            <a class="nav-option" href="projects/processing-sketches.html">processing sketches</a>
-          </div>
-          <a class="nav-option" href="blog.html">blog</a>
-          <a class="nav-option" href="about-me.html">about</a>
-        </div>
-      </nav>
-    </div>
+    <div id="page-wrapper" style="background-image: url('images/menu/about-alt.jpg');">
 
-    <main role="main">
-      <div class="about-container">
-        <div class="about-media">
-          <img class="about-image" src="images/self.jpg" alt="Black and white photograph of Wesley Klein.">
-          <div class="icon-container">
-            <a href="images/resume.pdf" title="Download My Resume" class="content-link"><img src="images/cv.png" id="icon"  alt="Icon for resume."></a>
-            <a href="https://github.com/chachoblow" title="My Github" class="content-link"><img src="images/github.png" id="icon"alt="Icon for Github."></a>
-            <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link"><img src="images/linkedin.png" id="icon" alt="Icon for LinkedIn."></a>
-            <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link"><img src="images/instagram.png" id="icon" alt="Icon for Instagram."></a>
-          </div>
+      <div id="image-wrapper"></div>
+
+      <header>
+
+        <a href="index.html">< back</a>
+        <div id="link-container">
+            <a href="https://github.com/chachoblow" title="My Github" class="content-link">Github</a>
+            <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link">LinkedIn</a>
+            <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link">Instagram</a>
+            <a href="images/resume.pdf" title="Download My Resume" class="content-link">Resume</a>      
         </div>
+
+      </header>
+
+      <main id="about">
+
         <div class="about-content">
-          <h1>about me</h1>
-          <p>Wesley Klein is an artist, maker, builder, and fixer. He completed his mathematics and computer science degree at The University of California, Berkeley. He is seeking oppurtunites within the software engineering field. Specifically, he is interested in virtual reality, agumented reality, creative coding, web design, and in a broad sense, the intersection of art and technology.</p>
-          <p>Apart from his studies, he enjoys making small, alternative comics and illustrations. He is currently learning to animate as well. He is highly interested in merging more traditional artistic endevours, such as, drawing and illustration, with new technologies. He is exploring the ways in which microcontrollers, web technologies, virtual reality, and creative coding frameworks can be merged with alternative comics, animation, and drawing. </p>
+          <ol>
+            <li>
+              Information
+            </li>
+            <li>
+              Wesley Klein is an artist, maker, builder, and fixer. He completed his mathematics and computer science degree at The University of California, Berkeley. He is seeking oppurtunites within the software engineering field. Specifically, he is interested in virtual reality, agumented reality, creative coding, web design, and in a broad sense, the intersection of art and technology.
+            </li>
+            <li>
+              Apart from his studies, he enjoys making small, alternative comics and illustrations. He is currently learning to animate as well. He is highly interested in merging more traditional artistic endevours, such as, drawing and illustration, with new technologies. He is exploring the ways in which microcontrollers, web technologies, virtual reality, and creative coding frameworks can be merged with alternative comics, animation, and drawing.
+            </li>
+          </ol>
         </div>
-      </div>
-    </main>
+
+      </main>
+
+    </div> 
+
   </body>
-  <script src="js/dropdown.js"></script>
+
+  <script src="js/menu-images-fade.js"></script>
+
 </html>
+
 
