--- a/artwork/illustrations.html
+++ b/artwork/illustrations.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
-  <body>
+  <body style="overflow-y: hidden;">
 
     <div id="page-wrapper" style="background-image: none;">
 
