--- a/projects/processing-sketches.html
+++ b/projects/processing-sketches.html
@@ -30,43 +30,43 @@
         <nav>
           <ol>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/Hkf4Syku7">exploding balls</a>
+              <a class="nav-option" href="processing-sketches/exploding-balls.html" onmouseover="changeBackground('../images/processing-sketches/exploding-balls.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">exploding balls</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/SyzxGGkd7">clicked fireworks</a>
+              <a class="nav-option" href="processing-sketches/clicked-fireworks.html" onmouseover="changeBackground('../images/processing-sketches/clicked-fireworks.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">clicked fireworks</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/Bk4yWwkOm">bobbing ocean</a>
+              <a class="nav-option" href="processing-sketches/bobbing-ocean.html" onmouseover="changeBackground('../images/processing-sketches/bobbing-ocean.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">bobbing ocean</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/HJ6O_1WO7">random chords</a>
+              <a class="nav-option" href="processing-sketches/random-chords.html" onmouseover="changeBackground('../images/processing-sketches/random-chords.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">random chords</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/rJt59ZZuX">suns colliding</a>
+              <a class="nav-option" href="processing-sketches/suns-colliding.html" onmouseover="changeBackground('../images/processing-sketches/suns-colliding.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">suns colliding</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/rkUBxdZ_Q">pointillism</a>
+              <a class="nav-option" href="processing-sketches/pointillism.html" onmouseover="changeBackground('../images/processing-sketches/pointillism.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">pointillism</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/rye6tR-dX">criss-cross gradient</a>
+              <a class="nav-option" href="processing-sketches/criss-cross.html" onmouseover="changeBackground('../images/processing-sketches/criss-cross.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">criss-cross gradient</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/SkziiCE_7">row color cirlces</a>
+              <a class="nav-option" href="processing-sketches/row-suns.html" onmouseover="changeBackground('../images/processing-sketches/row-suns.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">row suns</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/Hkz8pREO7">rows and columns</a>
+              <a class="nav-option" href="processing-sketches/row-column-suns.html" onmouseover="changeBackground('../images/processing-sketches/row-column-suns.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">row and column suns</a>              
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/r1ikVXd_m">ghost webcam</a>
+              <a class="nav-option" href="processing-sketches/ghost-webcam.html" onmouseover="changeBackground('../images/processing-sketches/ghost-webcam.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">ghost webcam</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/H1J63H9dX">make your own shape</a>
+              <a class="nav-option" href="processing-sketches/make-shape.html" onmouseover="changeBackground('../images/processing-sketches/make-shape.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">make your own shape</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/v2e6Y4WyW">game of life</a>
+              <a class="nav-option" href="processing-sketches/game-of-life.html" onmouseover="changeBackground('../images/processing-sketches/game-of-life.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">game of life</a>
             </li>
             <li>
-              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/AEuGouJYL">dynamic collage</a>
+              <a class="nav-option" href="processing-sketches/collage.html" onmouseover="changeBackground('../images/processing-sketches/collage.jpg')" onmouseout="whiteBackground('../images/menu/slit-scan.jpg')">dynamic collage</a>
             </li>
           </ol>
         </nav>
